	NAs was used.)

    o	array() and matrix() now allow 0-length `data' arguments for
	compatibility with S.

    o	"POSIXct" objects can now have a "tzone" attribute that
	determines how they will be converted and printed.  This means
	that date-time objects which have a timezone specified will
	generally be regarded as in their original time zone.


UTILITIES

    o	R CMD check  now runs the (Rd) examples with default RNGkind
	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.

    o	undoc() in package `tools' has a new default of `use.values =
	NULL' which produces a warning whenever the default values of
	function arguments differ between documentation and code.
	Note that this affects "R CMD check" as well.

    o	Testing examples via massage-examples.pl (as used by R CMD
	check) now restores the search path after every help file.

    o	checkS3methods() in package 'tools' now also looks for generics
	in the loaded namespaces/packages listed in the Depends fields
	of the package's DESCRIPTION file when testing an installed
	package.


C-LEVEL FACILITIES

    o	arraySubscript and vectorSubscript take a new argument which
	is a function pointer that provides access to character
	strings (such as the names vector) rather than assuming these
	are passed in.

    o	R_CheckUserInterrupts is now described in `Writing R Extensions'
	and there is a new equivalent subroutine rchkusr for calling
	from FORTRAN code.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.

    o	The command-line arguments --nsize and --vsize are no longer
	recognized as synonyms for --min-nsize and --min-vsize (which
	replaced them in 1.2.0).

    o	Unnecessary methods coef.{g}lm and fitted.{g}lm